# Contract-Review-Copilot-iosapp

./: .gitignore  CTSafe_iOS_项目交接与后续开发计划.docx
server/contract-review-copilot/backend/: .env.example  pyproject.toml
server/contract-review-copilot/backend/evals/: golden_contracts.json
server/contract-review-copilot/backend/src/: __init__.py  auth.py  commerce.py  config.py  llm_client.py  main.py  password_policy.py  rate_limit.py  report_export.py  schemas.py  startup.py
server/contract-review-copilot/backend/src/agents/: aggregation.py  breakpoint.py  entity_extraction.py  legal_skill.py  logic_review.py  routing.py
server/contract-review-copilot/backend/src/audit/: __init__.py  cli.py  models.py  scanner.py
server/contract-review-copilot/backend/src/cache/: __init__.py  redis_cache.py
server/contract-review-copilot/backend/src/chat_retrieval/: __init__.py  query_rewrite.py  retrieval.py
server/contract-review-copilot/backend/src/evals/: __init__.py  golden_runner.py
server/contract-review-copilot/backend/src/graph/: review_graph.py  state.py
server/contract-review-copilot/backend/src/ocr/: __init__.py  (+2 more)
server/contract-review-copilot/backend/tests/: test_auth.py  test_auth_antibot.py  test_breakpoint.py  test_cache_behavior.py  test_commerce.py  test_curated_knowledge_base.py  test_golden_eval_harness.py  test_ingest_service.py  test_llm_fallback.py  test_logic_review.py  test_main.py  test_model_routing.py  test_ocr_queue_api.py  test_project_audit.py  test_queue_workers.py  test_report_export.py  test_review_graph.py  test_upload_hardening.py
(+127 files in other folders)
